--- a/src/LBF/MainBundle/Resources/translations/messages.fr.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.fr.yml
@@ -265,6 +265,7 @@ modal:
         answer8bis:             "+51 984 06 06 20"
     testimoniesModal:
         title:                  "Témoignages"
+        nothingHere:            "Aucun témoignage pour l'instant ..."
     actions: 
         close:                  Fermer
         newTestimony:           Nouveau témoignage
