--- a/src/LBF/MainBundle/Resources/translations/messages.es.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.es.yml
@@ -268,6 +268,7 @@ modal:
         answer8bis:             "+51 984 06 06 20"
     testimoniesModal:
         title:                  "Testimonios"
+        nothingHere:            "Ningun testimonio ahora..."
     actions: 
         close:                  Cerrar
         newTestimony:           Nuevo testimonio
